--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -9,7 +9,7 @@ html {
     font-size: 62.5%;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    background-image: url(C:\Users\mdsaa\Velzck_Shop\imgs\BG.webp);
+    background-image: url(imgs\BG.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
